# screenshot-tool

./: .gitignore  README.md  env.example  pyproject.toml
.claude/: settings.json
docs/: data-testid-convention.md
manifests/: example.yaml  minneapolis-singles.yaml
src/captool/: __init__.py  actions.py  auth.py  cli.py  diff.py  gallery.py  manifest.py  runner.py
